Fix crashing reported in the following LibreOffice bug:

https://bugs.freedesktop.org/show_bug.cgi?id=69162